--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,15 @@
 .ipynb_checkpoints/*
+.DS_Store/*
+.DS_Store/
 .DS_Store
 *.html
-notebooks/.ipynb_checkpoints/*
-notebooks/.DS_Store
 notebooks/old_notebooks
 notebooks/logs/*
 notebooks/XRef/*
 notebooks/parameter_estimation_notebooks/*
 notebooks/gurobi.log
-input/.ipynb_checkpoints/*
-models/.ipynb_checkpoints/*
-models/.DS_Store
 models/other_models/*
 output/*
-functions/.ipynb_checkpoints/*
 functions/__pycache__/*
 functions/functions_not_used/
-scripts/.ipynb_checkpoints/*
-figures/.ipynb_checkpoints/*
+.ipynb_checkpoints/
